# NET.SIM-CPP

./: .gitignore  CMakeLists.txt  README.md  group_info__9.txt  main.cpp  netslim_notes.txt
include/: factory.hpp  helpers.hpp  helpers_2.hpp  nodes.hpp  package.hpp  storage_types.hpp  types.hpp
src/: factory.cpp  helpers.cpp  helpers_2.cpp  nodes.cpp  package.cpp  storage_types.cpp
test/: test_nodes.cpp  test_package.cpp  test_storage_types.cpp
test_final/: test_Factory.cpp
